@@ -81,6 +81,8 @@ PHP                                                                        NEWS
   (Dmitry)
 - Fixed bug #38456 (Apache2 segfaults when virtual() is called in .php
   ErrorDocument). (Ilia)
+- Fixed bug #37773 (iconv_substr() gives "Unknown error" when string length = 1").
+  (Ilia)
 - Fixed bug #36975 (natcasesort() causes array_pop() to misbehave). (Hannes)
 - Fixed bug #36812 (pg_execute() modifies input array). (Ilia)
 - Fixed bug #36644 (possible crash in variant_date_from_timestamp()). (Ilia)
